Refactor to use ternary operator

--- a/evenOrOdd.html
+++ b/evenOrOdd.html
@@ -9,11 +9,7 @@
   <body>
     <script type="text/javascript">
       function even_or_odd(number) {
-        if(number % 2 === 0) {
-          return 'Even'
-        } else {
-          return 'Odd'
-        }
+        return (number % 2 === 0 ? 'Even' : 'Odd');
       }
 
       console.log(even_or_odd(7));
